fix: align issue

--- a/zenctuary-theme-starter/blocks/zen-memberships/style.scss
+++ b/zenctuary-theme-starter/blocks/zen-memberships/style.scss
@@ -16,6 +16,13 @@
   line-height: 1.6;
 }
 
+.zen-memberships-tabs-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .zen-memberships-tabs-row {
   display: flex;
   justify-content: center;
